dist/service.yml
apiVersion: v1
kind: Service
metadata:
  name: guess
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: guess
    tier: app
  type: NodePort
