dist/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: "guess"
spec:
  rules:
    - host: guess.taiidani.com
      http:
        paths:
          - backend:
              serviceName: guess
              servicePort: http
  tls:
    - hosts:
        - guess.taiidani.com
